--- a/.env.example
+++ b/.env.example
@@ -55,6 +55,12 @@ GRAFANA_POSTGRES_SUPER_PASSWORD="xxxxxxxx"
 GRAFANA_POSTGRES_SUPER_USER="xxxxxxxx"
 GRAFANA_POSTGRES_USER="xxxxxxxx"
 
+# secret/security/atuin
+ATUIN_POSTGRES_PASSWORD="xxxxxxxx"
+ATUIN_POSTGRES_SUPER_PASSWORD="xxxxxxxx"
+ATUIN_POSTGRES_SUPER_USER="xxxxxxxx"
+ATUIN_POSTGRES_USER="xxxxxxxx"
+
 # secret/security/dex
 DEX_GITOPS_CLIENT_SECRET="xxxxxxxx"
 DEX_IMMICH_CLIENT_SECRET="xxxxxxxx"
