--- a/kubernetes/clusters/k0s/security/atuin/ks.yaml
+++ b/kubernetes/clusters/k0s/security/atuin/ks.yaml
@@ -27,7 +27,7 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: atuin-database
+  name: &app atuin-database
   namespace: flux-system
 spec:
   targetNamespace: security
