--- a/kubernetes/clusters/k0s/security/atuin/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/security/atuin/app/helmrelease.yaml
@@ -81,7 +81,7 @@ spec:
     ingress:
       main:
         enabled: true
-        className: internal
+        className: nginx
         hosts:
           - host: &host "sh.${DOMAIN}"
             paths:
