add actual server

--- a/kubernetes/clusters/k2s/home-automation/kustomization.yaml
+++ b/kubernetes/clusters/k2s/home-automation/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
   - ./externalsecret.yaml
   - ./ciliumnetworkpolicy.yaml
   # Flux-Kustomizations
+  - ./actual/ks.yaml
   - ./esphome/ks.yaml
   - ./home-assistant/ks.yaml
   - ./ser2net/ks.yaml
