--- a/kubernetes/clusters/k2s/database/redis/app/helmrelease.yaml
+++ b/kubernetes/clusters/k2s/database/redis/app/helmrelease.yaml
@@ -33,6 +33,9 @@ spec:
     master:
       persistence:
         enabled: false
+      serviceAccount:
+        create: true
+        name: "redis"
     replica:
       persistence:
         enabled: false
