--- a/kubernetes/clusters/k2s/database/redis/app/helmrelease.yaml
+++ b/kubernetes/clusters/k2s/database/redis/app/helmrelease.yaml
@@ -39,6 +39,9 @@ spec:
     replica:
       persistence:
         enabled: false
+      serviceAccount:
+        create: false
+        name: "redis"
     sentinel:
       enabled: true
       masterSet: redis-master
