--- a/kubernetes/clusters/k2s/home-automation/kustomization.yaml
+++ b/kubernetes/clusters/k2s/home-automation/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
   - ./ciliumnetworkpolicy.yaml
   # Flux-Kustomizations
   - ./esphome/ks.yaml
+  - ./financial-freedom/ks.yaml
   - ./home-assistant/ks.yaml
   - ./ser2net/ks.yaml
   - ./tidbyt-proxy/ks.yaml
