--- a/kubernetes/clusters/k2s/security/oauth2-proxy/app/helmrelease.yaml
+++ b/kubernetes/clusters/k2s/security/oauth2-proxy/app/helmrelease.yaml
@@ -36,6 +36,30 @@ spec:
       enabled: false
     readinessProbe:
       enabled: false
+    serviceAccount:
+      automountServiceAccountToken: false
+    extraVolumeMounts:
+    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
+      name: serviceaccount-token
+    extraVolumes:
+    - name: serviceaccount-token
+      projected:
+        defaultMode: 0444
+        sources:
+        - serviceAccountToken:
+            expirationSeconds: 3607
+            path: token
+        - configMap:
+            name: kube-root-ca.crt
+            items:
+            - key: ca.crt
+              path: ca.crt
+        - downwardAPI:
+            items:
+            - path: namespace
+              fieldRef:
+                apiVersion: v1
+                fieldPath: metadata.namespace
     config:
       existingSecret: oauth2-proxy-secret
       configFile: |-
