--- a/kubernetes/clusters/shared/kube-system/external-secrets/app/helmrelease.yaml
+++ b/kubernetes/clusters/shared/kube-system/external-secrets/app/helmrelease.yaml
@@ -32,6 +32,29 @@ spec:
     serviceAccount:
       create: true
       name: "external-secret"
+      automount: false
+    extraVolumeMounts:
+    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
+      name: serviceaccount-token
+    extraVolumes:
+    - name: serviceaccount-token
+      projected:
+        defaultMode: 0444
+        sources:
+        - serviceAccountToken:
+            expirationSeconds: 3607
+            path: token
+        - configMap:
+            name: kube-root-ca.crt
+            items:
+            - key: ca.crt
+              path: ca.crt
+        - downwardAPI:
+            items:
+            - path: namespace
+              fieldRef:
+                apiVersion: v1
+                fieldPath: metadata.namespace
     podSecurityContext:
       fsGroup: 1000
     securityContext:
@@ -74,3 +97,27 @@ spec:
         requests:
           cpu: 10m
           memory: 32Mi
+      serviceAccount:
+          automount: false
+      extraVolumeMounts:
+      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
+        name: serviceaccount-token
+      extraVolumes:
+      - name: serviceaccount-token
+        projected:
+          defaultMode: 0444
+          sources:
+          - serviceAccountToken:
+              expirationSeconds: 3607
+              path: token
+          - configMap:
+              name: kube-root-ca.crt
+              items:
+              - key: ca.crt
+                path: ca.crt
+          - downwardAPI:
+              items:
+              - path: namespace
+                fieldRef:
+                  apiVersion: v1
+                  fieldPath: metadata.namespace
