--- a/kubernetes/clusters/shared/kube-system/external-secrets/app/helmrelease.yaml
+++ b/kubernetes/clusters/shared/kube-system/external-secrets/app/helmrelease.yaml
@@ -32,7 +32,7 @@ spec:
     serviceAccount:
       create: true
       name: "external-secret"
-      automountServiceAccountToken: false
+      automount: false
     extraVolumeMounts:
     - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
       name: serviceaccount-token
@@ -98,7 +98,7 @@ spec:
           cpu: 10m
           memory: 32Mi
       serviceAccount:
-        automountServiceAccountToken: false
+        automount: false
       extraVolumeMounts:
       - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
         name: serviceaccount-token
