--- a/kubernetes/clusters/k2s/kube-system/cilium/app/role.yaml
+++ b/kubernetes/clusters/k2s/kube-system/cilium/app/role.yaml
@@ -2,7 +2,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: spire-server
+  name: spire-server-pod
   namespace: cilium-spire
   labels:
     app.kubernetes.io/managed-by: Helm
