--- a/kubernetes/clusters/shared/csi-addons-system/csi-addons-controller-manager/ks.yaml
+++ b/kubernetes/clusters/shared/csi-addons-system/csi-addons-controller-manager/ks.yaml
@@ -28,4 +28,5 @@ spec:
                 image: quay.io/csiaddons/k8s-controller:v0.8.0
       target:
         kind: Deployment
-        labelSelector: "kustomize.toolkit.fluxcd.io/name=shared-apps-csi-addons-controller-manager"
+        name: csi-addons-controller-manager
+        namespace: csi-addons-system
