--- a/kubernetes/clusters/shared/database/cloudnative-pg/app/helmrelease.yaml
+++ b/kubernetes/clusters/shared/database/cloudnative-pg/app/helmrelease.yaml
@@ -34,3 +34,9 @@ spec:
     config:
       data:
         INHERITED_ANNOTATIONS: kyverno.io/ignore
+    resources:
+      limits:
+        memory: 256Mi
+      requests:
+        cpu: 50m
+        memory: 128Mi
