--- a/kubernetes/flux/config/flux.yaml
+++ b/kubernetes/flux/config/flux.yaml
@@ -66,9 +66,52 @@ spec:
                     limits:
                       cpu: 2000m
                       memory: 2Gi
+                    requests:
+                      cpu: 100m
+                      memory: 384Mi
       target:
         kind: Deployment
-        name: (kustomize-controller|helm-controller|source-controller)
+        name: source-controller
+    - patch: |
+        apiVersion: apps/v1
+        kind: Deployment
+        metadata:
+          name: not-used
+        spec:
+          template:
+            spec:
+              containers:
+                - name: manager
+                  resources:
+                    limits:
+                      cpu: 2000m
+                      memory: 2Gi
+                    requests:
+                      cpu: 300m
+                      memory: 384Mi
+      target:
+        kind: Deployment
+        name: helm-controller
+    - patch: |
+        apiVersion: apps/v1
+        kind: Deployment
+        metadata:
+          name: not-used
+        spec:
+          template:
+            spec:
+              containers:
+                - name: manager
+                  resources:
+                    limits:
+                      cpu: 2000m
+                      memory: 2Gi
+                    requests:
+                      cpu: 100m
+                      memory: 256Mi
+      target:
+        kind: Deployment
+        name: kustomize-controller
     # Enable drift detection for HelmReleases and set the log level to debug
     # https://fluxcd.io/flux/components/helm/helmreleases/#drift-detection
     - patch: |
