--- a/kubernetes/clusters/k2s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/clusters/k2s/kube-system/cilium/app/helmrelease.yaml
@@ -177,6 +177,12 @@ spec:
           enabled: true
       dashboards:
         enabled: true
+      resources:
+        limits:
+          memory: 384Mi
+        requests:
+          cpu: 50m
+          memory: 256Mi
     prometheus:
       enabled: true
       serviceMonitor:
