--- a/kubernetes/clusters/shared/kube-system/external-secrets/app/helmrelease.yaml
+++ b/kubernetes/clusters/shared/kube-system/external-secrets/app/helmrelease.yaml
@@ -74,6 +74,14 @@ spec:
       requests:
         cpu: 50m
         memory: 128Mi
+    certController:
+      resources:
+        limits:
+          cpu: 100m
+          memory: 384Mi
+        requests:
+          cpu: 50m
+          memory: 256Mi
     webhook:
       image:
         repository: ghcr.io/external-secrets/external-secrets
