--- a/kubernetes/clusters/shared/kube-system/metrics-server/app/helmrelease.yaml
+++ b/kubernetes/clusters/shared/kube-system/metrics-server/app/helmrelease.yaml
@@ -35,3 +35,9 @@ spec:
       enabled: true
     serviceMonitor:
       enabled: true
+    resources:
+      limits:
+        memory: 256Mi
+      requests:
+        cpu: 100m
+        memory: 128Mi
