--- a/kubernetes/clusters/shared/kube-system/node-feature-discovery/app/helmrelease.yaml
+++ b/kubernetes/clusters/shared/kube-system/node-feature-discovery/app/helmrelease.yaml
@@ -43,3 +43,9 @@ spec:
           usb:
             deviceClassWhitelist: ["02", "03", "0e", "ef", "fe", "ff"]
             deviceLabelFields: ["class", "vendor", "device"]
+      resources:
+        limits:
+          memory: 128Mi
+        requests:
+          cpu: 100m
+          memory: 64Mi
