--- a/kubernetes/clusters/shared/kube-system/node-feature-discovery/app/helmrelease.yaml
+++ b/kubernetes/clusters/shared/kube-system/node-feature-discovery/app/helmrelease.yaml
@@ -49,3 +49,10 @@ spec:
         requests:
           cpu: 100m
           memory: 64Mi
+    gc:
+      resources:
+        limits:
+          memory: 128Mi
+        requests:
+          cpu: 100m
+          memory: 64Mi
