--- a/kubernetes/clusters/shared/kube-system/reloader/app/helmrelease.yaml
+++ b/kubernetes/clusters/shared/kube-system/reloader/app/helmrelease.yaml
@@ -31,9 +31,10 @@ spec:
       podMonitor:
         enabled: false
         namespace: *namespace
-    resources:
-      limits:
-        memory: 256Mi
-      requests:
-        cpu: 100m
-        memory: 128Mi
+      deployment:
+        resources:
+          limits:
+            memory: 256Mi
+          requests:
+            cpu: 100m
+            memory: 128Mi
