--- a/kubernetes/clusters/shared/kube-system/snapshot-controller/app/snapshot-controller/helmrelease.yaml
+++ b/kubernetes/clusters/shared/kube-system/snapshot-controller/app/snapshot-controller/helmrelease.yaml
@@ -31,5 +31,11 @@ spec:
     controller:
       serviceMonitor:
         create: true
+      resources:
+        limits:
+          memory: 128Mi
+        requests:
+          cpu: 100m
+          memory: 64Mi
     webhook:
       enabled: false
