--- a/kubernetes/clusters/k2s/media/immich/app/server/helmrelease.yaml
+++ b/kubernetes/clusters/k2s/media/immich/app/server/helmrelease.yaml
@@ -63,9 +63,11 @@ spec:
               - secretRef:
                   name: *secret
             resources:
+              limits:                
+                memory: 512Mi
               requests:
                 cpu: 100m
-                memory: 250Mi
+                memory: 256Mi
     service:
       main:
         ports:
