--- a/kubernetes/clusters/k2s/monitoring/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/clusters/k2s/monitoring/kube-prometheus-stack/app/helmrelease.yaml
@@ -38,6 +38,13 @@ spec:
       enabled: false
     defaultRules:
       create: false
+    prometheusOperator:
+      resources:
+        limits:
+          memory: 128Mi
+        requests:
+          cpu: 100m
+          memory: 64Mi
     kubelet:
       enabled: true
       serviceMonitor:
