--- a/kubernetes/clusters/k2s/security/oauth2-proxy/app/helmrelease.yaml
+++ b/kubernetes/clusters/k2s/security/oauth2-proxy/app/helmrelease.yaml
@@ -36,6 +36,12 @@ spec:
       enabled: false
     readinessProbe:
       enabled: false
+    resources:
+      limits:
+        memory: 128Mi
+      requests:
+        cpu: 50m
+        memory: 64Mi
     serviceAccount:
       automountServiceAccountToken: false
     extraVolumeMounts:
