--- a/kubernetes/clusters/k2s/monitoring/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/clusters/k2s/monitoring/kube-prometheus-stack/app/helmrelease.yaml
@@ -170,6 +170,12 @@ spec:
         - pods=[*]
         - deployments=[*]
         - persistentvolumeclaims=[*]
+      resources:
+        limits:
+          memory: 256Mi
+        requests:
+          cpu: 100m
+          memory: 128Mi
       prometheus:
         monitor:
           enabled: true
