--- a/kubernetes/clusters/k2s/database/emqx/app/helmrelease.yaml
+++ b/kubernetes/clusters/k2s/database/emqx/app/helmrelease.yaml
@@ -37,6 +37,12 @@ spec:
       externalTrafficPolicy: Cluster
       annotations:
         io.cilium/lb-ipam-ips: "192.168.8.50"
+    resources:
+      limits:
+        memory: 768Mi
+      requests:
+        cpu: 100m
+        memory: 512Mi
     ingress:
       dashboard:
         enabled: false
