--- a/kubernetes/clusters/k2s/monitoring/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/clusters/k2s/monitoring/kube-prometheus-stack/app/helmrelease.yaml
@@ -45,6 +45,13 @@ spec:
         requests:
           cpu: 100m
           memory: 64Mi
+      prometheusConfigReloader:
+        resources:
+          requests:
+            cpu: 100m
+            memory: 64Mi
+          limits:            
+            memory: 128Mi
     kubelet:
       enabled: true
       serviceMonitor:
