--- a/kubernetes/clusters/k2s/database/redis/app/helmrelease.yaml
+++ b/kubernetes/clusters/k2s/database/redis/app/helmrelease.yaml
@@ -73,3 +73,9 @@ spec:
       serviceMonitor:
         enabled: true
         interval: 1m
+      resources:
+        limits:
+          memory: 128Mi
+        requests:
+          cpu: 50m
+          memory: 64Mi
