--- a/kubernetes/clusters/k2s/kube-system/cilium/ks.yaml
+++ b/kubernetes/clusters/k2s/kube-system/cilium/ks.yaml
@@ -14,6 +14,34 @@ spec:
   interval: 30m
   retryInterval: 1m
   timeout: 5m
+  patches:
+    - patch: |-
+        apiVersion: apps/v1
+        kind: StatefulSet
+        metadata:
+          name: not-used
+        spec:
+          template:
+            spec:
+              containers:
+              - name: cilium-init
+                resources:
+                  limits:
+                    memory: 128Mi
+                  requests:
+                    cpu: 50m
+                    memory: 64Mi 
+              - name: spire-server
+                resources:
+                  limits:
+                    memory: 256Mi
+                  requests:
+                    cpu: 50m
+                    memory: 128Mi
+      target:
+        kind: StatefulSet
+        name: spire-server
+        namespace: cilium-spire
 # ---
 # apiVersion: kustomize.toolkit.fluxcd.io/v1
 # kind: Kustomization
