--- a/kubernetes/clusters/k0s/database/redis/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/database/redis/app/helmrelease.yaml
@@ -33,9 +33,27 @@ spec:
     master:
       persistence:
         enabled: false
+      serviceAccount:
+        create: true
+        name: "redis"
+      resources:
+        limits:
+          memory: 256Mi
+        requests:
+          cpu: 100m
+          memory: 128Mi
     replica:
       persistence:
         enabled: false
+      serviceAccount:
+        create: false
+        name: "redis"
+      resources:
+        limits:
+          memory: 256Mi
+        requests:
+          cpu: 100m
+          memory: 128Mi
     sentinel:
       enabled: true
       masterSet: redis-master
@@ -44,8 +62,20 @@ spec:
         failureThreshold: 2
       persistence:
         enabled: false
+      resources:
+        limits:
+          memory: 256Mi
+        requests:
+          cpu: 100m
+          memory: 128Mi
     metrics:
       enabled: true
       serviceMonitor:
         enabled: true
         interval: 1m
+      resources:
+        limits:
+          memory: 128Mi
+        requests:
+          cpu: 50m
+          memory: 64Mi
