--- a/kubernetes/clusters/k2s/media/excalidraw/app/helmrelease.yaml
+++ b/kubernetes/clusters/k2s/media/excalidraw/app/helmrelease.yaml
@@ -26,46 +26,76 @@ spec:
   uninstall:
     keepHistory: false
   values:
-    # defaultPodOptions:
-      # securityContext:
-      #   fsGroup: 101
-      #   runAsUser: 101
-      #   runAsGroup: 101
+    defaultPodOptions:
+      securityContext:
+        fsGroup: 101
+        runAsUser: 101
+        runAsGroup: 101
     controllers:
       main:
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
           main:
-            # securityContext:
-            #   fsGroup: 101
-            #   runAsUser: 101
-            #   runAsGroup: 101
-            #   capabilities:
-            #     drop:
-            #       - ALL
-            #   runAsNonRoot: false
-            #   readOnlyRootFilesystem: false
-            #   allowPrivilegeEscalation: false
-            #   seccompProfile:
-            #     type: RuntimeDefault
+            securityContext:
+              fsGroup: 101
+              runAsUser: 101
+              runAsGroup: 101
+              capabilities:
+                drop:
+                  - ALL
+              runAsNonRoot: false
+              readOnlyRootFilesystem: false
+              allowPrivilegeEscalation: false
+              seccompProfile:
+                type: RuntimeDefault
+            image:
+              repository: dmcavinue/excalidraw
+              tag: 0.0.1
+            probes:
+              liveness: &probes
+                enabled: true
+                custom: true
+                spec:
+                  httpGet:
+                    path: /health
+                    port: &port 8080
+                  initialDelaySeconds: 0
+                  periodSeconds: 10
+                  timeoutSeconds: 1
+                  failureThreshold: 3
+              readiness: *probes
+              startup:
+                enabled: false
             resources:
               limits:
                 memory: 1500Mi
               requests:
                 cpu: 200m
                 memory: 1Gi
-            image:
-              repository: excalidraw/excalidraw
-              tag: latest
     service:
       main:
         ports:
           http:
-            port: 80
+            port: *port
     ingress:
       main:
-        enabled: false
+        enabled: true
+        className: nginx
+        # annotations:
+        #   nginx.ingress.kubernetes.io/auth-url: https://oauth.nucstack.com/oauth2/auth
+        #   nginx.ingress.kubernetes.io/auth-signin: https://oauth.nucstack.com/oauth2/start
+        hosts:
+          - host: &host draw.${DOMAIN}
+            paths:
+              - path: /
+                pathType: Prefix
+                service:
+                  name: main
+                  port: *port
+        tls:
+          - hosts:
+              - *host
     serviceAccount:
       create: true
       name: excalidraw
