--- a/kubernetes/clusters/k2s/media/excalidraw/app/helmrelease.yaml
+++ b/kubernetes/clusters/k2s/media/excalidraw/app/helmrelease.yaml
@@ -58,7 +58,7 @@ spec:
                 custom: true
                 spec:
                   httpGet:
-                    path: /health
+                    path: /
                     port: &port 8080
                   initialDelaySeconds: 0
                   periodSeconds: 10
