--- a/kubernetes/clusters/k2s/vault/vault-injector/app/helmrelease.yaml
+++ b/kubernetes/clusters/k2s/vault/vault-injector/app/helmrelease.yaml
@@ -26,6 +26,13 @@ spec:
   uninstall:
     keepHistory: false
   values:
+    agent:
+      resources:
+        limits:
+          memory: 256Mi
+        requests:
+          cpu: 100m
+          memory: 128Mi
     injector:
       enabled: true
       externalVaultAddr: https://vault.logfold.com
