--- a/kubernetes/clusters/k2s/media/immich/app/microservices/helmrelease.yaml
+++ b/kubernetes/clusters/k2s/media/immich/app/microservices/helmrelease.yaml
@@ -64,7 +64,7 @@ spec:
                   name: *secret
             resources:
               limits:                
-                memory: 512Mi
+                memory: 1Gi
               requests:
                 cpu: 100m
                 memory: 256Mi
