--- a/kubernetes/clusters/k2s/home-automation/actual/app/helmrelease.yaml
+++ b/kubernetes/clusters/k2s/home-automation/actual/app/helmrelease.yaml
@@ -28,7 +28,8 @@ spec:
   values:
     controllers:
       main:
-        deployment:
+        type: statefulset
+        statefulset:
           volumeClaimTemplates:
             - name: config
               globalMounts:
