--- a/kubernetes/clusters/k2s/home-automation/actual/app/helmrelease.yaml
+++ b/kubernetes/clusters/k2s/home-automation/actual/app/helmrelease.yaml
@@ -78,6 +78,9 @@ spec:
       main:
         enabled: true
         className: nginx
+        annotations:
+          nginx.ingress.kubernetes.io/auth-url: https://oauth.nucstack.com/oauth2/auth
+          nginx.ingress.kubernetes.io/auth-signin: https://oauth.nucstack.com/oauth2/start
         hosts:
           - host: &host finance.${DOMAIN}
             paths:
