--- a/kubernetes/clusters/k2s/home-automation/esphome/app/helmrelease.yaml
+++ b/kubernetes/clusters/k2s/home-automation/esphome/app/helmrelease.yaml
@@ -31,11 +31,11 @@ spec:
     - name: volsync
       namespace: volsync
   values:
-    defaultPodOptions:
-      securityContext:
-        fsGroup: 1001
-        runAsUser: 1001
-        runAsGroup: 1001
+    # defaultPodOptions:
+    #   securityContext:
+    #     fsGroup: 1001
+    #     runAsUser: 1001
+    #     runAsGroup: 1001
     controllers:
       main:
         type: statefulset
@@ -51,18 +51,18 @@ spec:
           reloader.stakater.com/auto: "true"
         containers:
           main:
-            securityContext:
-              fsGroup: 1001
-              runAsUser: 1001
-              runAsGroup: 1001
-              capabilities:
-                drop:
-                  - ALL
-              runAsNonRoot: true
-              readOnlyRootFilesystem: true
-              allowPrivilegeEscalation: false
-              seccompProfile:
-                type: RuntimeDefault
+            # securityContext:
+            #   fsGroup: 1001
+            #   runAsUser: 1001
+            #   runAsGroup: 1001
+            #   capabilities:
+            #     drop:
+            #       - ALL
+            #   runAsNonRoot: true
+            #   readOnlyRootFilesystem: true
+            #   allowPrivilegeEscalation: false
+            #   seccompProfile:
+            #     type: RuntimeDefault
             resources:
               limits:
                 memory: 1500Mi
@@ -76,8 +76,6 @@ spec:
               ESPHOME_DASHBOARD_USE_PING: true
               PLATFORMIO_CORE_DIR: /config/.plattformio
               PLATFORMIO_GLOBALLIB_DIR: /config/.plattformioLibs
-              PLATFORMIO_CACHE_DIR: /config/.cache
-              PLATFORMIO_BUILD_CACHE_DIR: /config/.build_cache
     service:
       main:
         ports:
