--- a/kubernetes/clusters/k2s/home-automation/kustomization.yaml
+++ b/kubernetes/clusters/k2s/home-automation/kustomization.yaml
@@ -11,6 +11,7 @@ resources:
   - ./actual/ks.yaml
   - ./esphome/ks.yaml
   - ./home-assistant/ks.yaml
+  - ./music-assistant/ks.yaml
   - ./ser2net/ks.yaml
   - ./tidbyt-proxy/ks.yaml
   - ./unifi-downloader/ks.yaml
