--- a/kubernetes/clusters/k2s/home-automation/music-assistant/app/helmrelease.yaml
+++ b/kubernetes/clusters/k2s/home-automation/music-assistant/app/helmrelease.yaml
@@ -65,7 +65,22 @@ spec:
             port: &port 8095
     ingress:
       main:
-        enabled: false
+        enabled: true
+        className: nginx
+        # annotations:
+        #   nginx.ingress.kubernetes.io/auth-url: https://oauth.nucstack.com/oauth2/auth
+        #   nginx.ingress.kubernetes.io/auth-signin: https://oauth.nucstack.com/oauth2/start
+        hosts:
+          - host: &host music.${DOMAIN}
+            paths:
+              - path: /
+                pathType: Prefix
+                service:
+                  name: main
+                  port: *port
+        tls:
+          - hosts:
+              - *host
     serviceAccount:
       create: true
       name: music-assistant
