--- a/kubernetes/clusters/k2s/home-automation/music-assistant/app/helmrelease.yaml
+++ b/kubernetes/clusters/k2s/home-automation/music-assistant/app/helmrelease.yaml
@@ -88,6 +88,8 @@ spec:
       name: music-assistant
     persistence:
       config:
+        enabled: false
+      data:
         enabled: true
         existingClaim: music-assistant
       tmp:
