--- a/kubernetes/clusters/k0s/database/redis/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/database/redis/app/helmrelease.yaml
@@ -21,7 +21,7 @@ spec:
     remediation:
       retries: 3
   upgrade:
-    cleanupOnFail: true
+    cleanupOnFail: false
     remediation:
       retries: 3
   uninstall:
