--- a/kubernetes/clusters/k0s/database/redis/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/database/redis/app/helmrelease.yaml
@@ -69,7 +69,7 @@ spec:
           cpu: 100m
           memory: 128Mi
     metrics:
-      enabled: false
+      enabled: true
       serviceMonitor:
         enabled: true
         interval: 1m
