--- a/kubernetes/clusters/k2s/database/redis/app/helmrelease.yaml
+++ b/kubernetes/clusters/k2s/database/redis/app/helmrelease.yaml
@@ -69,7 +69,7 @@ spec:
           cpu: 100m
           memory: 128Mi
     metrics:
-      enabled: true
+      enabled: false
       serviceMonitor:
         enabled: true
         interval: 1m
