--- a/kubernetes/clusters/k0s/monitoring/netdata/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/monitoring/netdata/app/helmrelease.yaml
@@ -39,10 +39,10 @@ spec:
       TZ: America/New_York
     parent:
       enabled: true
-      # alarms:
-      #   storageclass: "ceph-block"
-      # database:
-      #   storageclass: "ceph-block"
+      alarms:
+        storageclass: "local-path"
+      database:
+        storageclass: "local-path"
     child:
       enabled: false
     k8sState:
