--- a/kubernetes/clusters/k0s/monitoring/netdata/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/monitoring/netdata/app/helmrelease.yaml
@@ -46,6 +46,29 @@ spec:
       database:
         storageclass: "local-path"
         volumesize: 2Gi
+      configs:
+        netdata:
+          enabled: true
+          path: /etc/netdata/netdata.conf
+          data: |
+            [global]
+              hostname = ${DOMAIN}
+            [db]
+              mode = dbengine
+
+            [plugins]
+              cgroups = no
+              tc = no
+              enable running new plugins = no
+              check for new plugins every = 72000
+              python.d = no
+              charts.d = no
+              go.d = no
+              node.d = no
+              apps = no
+              proc = no
+              idlejitter = no
+              diskspace = no
     child:
       enabled: false
     k8sState:
