--- a/kubernetes/clusters/k0s/monitoring/netdata/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/monitoring/netdata/app/helmrelease.yaml
@@ -52,7 +52,7 @@ spec:
           path: /etc/netdata/netdata.conf
           data: |
             [global]
-              hostname = ${DOMAIN}
+              hostname = ${ENVIRONMENT}
             [db]
               mode = dbengine
 
