--- a/kubernetes/clusters/k0s/monitoring/netdata/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/monitoring/netdata/app/helmrelease.yaml
@@ -71,5 +71,5 @@ spec:
               diskspace = no
     child:
       enabled: false
-    k8sState:
-      enabled: false
+    # k8sState:
+    #   enabled: false
