--- a/kubernetes/clusters/k0s/monitoring/netdata/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/monitoring/netdata/app/helmrelease.yaml
@@ -74,4 +74,6 @@ spec:
     k8sState:
       enabled: true
       persistence:
-        enabled: false
+        enabled: true
+        storageclass: "local-path"
+        volumesize: 1Gi
