--- a/kubernetes/clusters/k2s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/clusters/k2s/kube-system/cilium/app/helmrelease.yaml
@@ -26,21 +26,6 @@ spec:
   uninstall:
     keepHistory: false
   values:
-    autoDirectNodeRoutes: false
-    enable-ipv4-masquerade: true
-    policyAuditMode: true
-    resources:
-      limits:
-        memory: 768Mi
-      requests:
-        cpu: 200m
-        memory: 512Mi
-    initResources:
-      limits:
-        memory: 128Mi
-      requests:
-        cpu: 100m
-        memory: 64Mi
     authentication:
       mutual:
         spire:
@@ -71,8 +56,28 @@ spec:
                 requests:
                   cpu: 100m
                   memory: 128Mi
+    autoDirectNodeRoutes: false
+    bandwidthManager:
+      enabled: true
+      bbr: true
+    resources:
+      limits:
+        memory: 768Mi
+      requests:
+        cpu: 200m
+        memory: 512Mi
+    initResources:
+      limits:
+        memory: 128Mi
+      requests:
+        cpu: 100m
+        memory: 64Mi
     bpf:
       masquerade: true
+    cgroup:
+      automount:
+        enabled: false
+      hostRoot: /sys/fs/cgroup
     bgp:
       enabled: false
     cluster:
@@ -86,7 +91,6 @@ spec:
         - name: k0s
           address: k0s.mesh.cilium.io
           port: 2379
-
       apiserver:
         tls:
           auto:
@@ -129,6 +133,9 @@ spec:
     containerRuntime:
       integration: containerd
       socketPath: /var/run/k3s/containerd/containerd.sock
+    enable-ipv4-masquerade: true
+    #devices: eth0
+    enableRuntimeDeviceDetection: true
     endpointRoutes:
       enabled: true
     endpointStatus:
@@ -225,6 +232,7 @@ spec:
           enabled: true
       dashboards:
         enabled: true
+    policyAuditMode: true
       resources:
         limits:
           memory: 512Mi
@@ -241,4 +249,22 @@ spec:
     securityContext:
       privileged: true
     routingMode: native
+    securityContext:
+      capabilities:
+        ciliumAgent:
+          - CHOWN
+          - KILL
+          - NET_ADMIN
+          - NET_RAW
+          - IPC_LOCK
+          - SYS_ADMIN
+          - SYS_RESOURCE
+          - DAC_OVERRIDE
+          - FOWNER
+          - SETGID
+          - SETUID
+        cleanCiliumState:
+          - NET_ADMIN
+          - SYS_ADMIN
+          - SYS_RESOURCE
     tunnel: disabled
